--- a/include/style.css
+++ b/include/style.css
@@ -9,7 +9,7 @@
 		border: 2px solid #ccc;
 		border-radius: 3px;
 		display: block;
-		margin-bottom: 10px;
+		margin: 0 0 10px;
 		padding: 5px;
 		width: 50%;
 	}
