- Added input type=date - Added possibility to choose text on submit button

--- a/include/style.css
+++ b/include/style.css
@@ -4,7 +4,7 @@
 	{
 	}
 
-	input[type=text], input[type=range], select, textarea
+	input[type=text], input[type=range], input[type=date], select, textarea
 	{
 		border: 2px solid #ccc;
 		border-radius: 3px;
