--- a/include/style_wp.css
+++ b/include/style_wp.css
@@ -84,8 +84,10 @@
 				top: 5px;
 			}
 
-		.form_row p, .form_row > .form_checkbox, .form_row .form_radio, .form_row .form_select, .form_row .form_textfield, .form_row .form_textarea
-		{}
+		.tr_range, .tr_check, .tr_text, .tr_select
+		{
+			display: none;
+		}
 
 		.tr_range input
 		{
