- Removed PHP Mailer - Adjusted style to not affect any other forms - Changed the way enqueuing scripts/styles works

--- a/include/style.css
+++ b/include/style.css
@@ -11,6 +11,7 @@
 		border: 2px solid #ccc;
 		border-radius: 3px;
 		display: inline-block;
+		height: auto;
 		margin: 0 0 10px;
 		padding: 5px;
 		width: 50%;
