--- a/include/style.css
+++ b/include/style.css
@@ -39,13 +39,13 @@
 				margin-left: -46px;
 			}
 
-	.mf_form > button
+	.mf_form > button, .mf_form > a > button
 	{
 		border: 2px solid #ccc;
 		border-radius: 3px;
 		cursor: pointer;
-		display: block;
-		margin-bottom: 10px;
+		display: inline-block;
+		margin: 0 10px 10px 0;
 		padding: 4px 10px 3px;
 	}
 }
