--- a/include/style.css
+++ b/include/style.css
@@ -1,51 +1,80 @@
 @media all
 {
-	.mf_form label
-	{
-		display: block;
-		margin-bottom: 5px;
-	}
-
-	.mf_form input[type=text], .mf_form input[type=range], .mf_form input[type=date], .mf_form select, .mf_form textarea
-	{
-		background: #fff;
-		border: 2px solid #ccc;
-		border-radius: 3px;
-		display: inline-block;
-		height: auto;
-		margin: 0 0 10px;
-		padding: 5px;
-		width: 50%;
-	}
-
-	.mf_form .form_checkbox, .mf_form .form_radio
-	{
-		margin-bottom: 10px;	
-	}
-
-		.mf_form .form_checkbox label, .mf_form .form_radio label
-		{
-			display: inline-block;
-		}
-
-		.mf_form .form_checkbox input, .mf_form .form_radio input
-		{
-			margin-right: 5px;
-		}
-
-			.mf_form .input-buttons.input-button-size-2
-			{
-				margin-top: 6px;
-				margin-left: -46px;
-			}
-
-	.mf_form button
-	{
-		border: 2px solid #ccc;
-		border-radius: 3px;
-		cursor: pointer;
-		display: block;
-		margin-bottom: 10px;
-		padding: 4px 10px 3px;
-	}
+    .mf_form
+    {
+        overflow: hidden;   
+    }
+    
+        .mf_form > div
+        {
+            clear: both;
+        }
+    
+        .mf_form .left_col
+        {
+            clear: left;
+            float: left;
+            width: 48%;
+        }
+        
+        .mf_form .right_col
+        {
+            clear: right;
+            float: right;
+            width: 48%;
+        }
+        
+        .mf_form label
+        {
+            display: block;
+            margin-bottom: 5px;
+        }
+    
+        .mf_form input[type=text], .mf_form input[type=range], .mf_form input[type=date], .mf_form select, .mf_form textarea
+        {
+            background: #fff;
+            border: 2px solid #ccc;
+            border-radius: 3px;
+            display: inline-block;
+            height: auto;
+            margin: 0 0 10px;
+            padding: 5px;
+            width: 50%;
+        }
+    
+            .mf_form .left_col input[type=text], .mf_form .left_col input[type=range], .mf_form .left_col input[type=date], .mf_form .left_col select, .mf_form .left_col textarea, .mf_form .right_col input[type=text], .mf_form .right_col input[type=range], .mf_form .right_col input[type=date], .mf_form .right_col select, .mf_form .right_col textarea
+            {
+                width: 100%;
+            }
+    
+        .mf_form .form_checkbox, .mf_form .form_radio
+        {
+            margin-bottom: 10px;	
+        }
+    
+            .mf_form .form_checkbox label, .mf_form .form_radio label
+            {
+                display: inline-block;
+            }
+    
+            .mf_form .form_checkbox input, .mf_form .form_radio input
+            {
+                margin-right: 5px;
+            }
+    
+                .mf_form .input-buttons.input-button-size-2
+                {
+                    margin-left: -42px;
+                }
+    
+        .mf_form > button
+        {
+            border: 2px solid #ccc;
+            border-radius: 3px;
+            clear: both;
+            cursor: pointer;
+            display: block;
+            margin-bottom: 10px;
+            padding: 4px 10px 3px;
+        }
 }
