--- a/include/style.css
+++ b/include/style.css
@@ -68,6 +68,11 @@
 					margin-left: -46px;
 				}
 
+			.mf_form .form_zipcode span
+			{
+				padding-left: 10px;
+			}
+
 		.mf_form > button, .mf_form > a > button
 		{
 			border: 2px solid #ccc;
