- Added flot & flot pie - Added pie charts to see results of polls - Added total answered to table header if radio button

--- a/include/style_wp.css
+++ b/include/style_wp.css
@@ -157,4 +157,11 @@
 				cursor: pointer;
 				font-size: 1.2em;
 			}
+
+	#flot_pie
+	{
+		height: 300px;
+		margin-bottom: 20px;
+		width: 400px;
+	}
 }
