--- a/include/style.css
+++ b/include/style.css
@@ -118,11 +118,11 @@
 		{
 			background: rgba(255, 255, 255, .2);
 			position: absolute;
-			height: 100%;
 		}
 
 		.mf_form_results .form_radio p
 		{
+			margin: 0;
 			position: relative;
 		}
 
