--- a/include/style_wp.css
+++ b/include/style_wp.css
@@ -5,7 +5,7 @@
 		font-size: 1.4em;
 	}
 
-	table
+	/*table
 	{
 		border: 1px solid #666;
 		border-radius: 3px;
@@ -52,7 +52,7 @@
 				border-bottom: 1px solid #ccc;
 				color: #333;
 				text-decoration: none;
-			}
+			}*/
 
 	.alignleft, .alignright
 	{
